--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
 }
 
 .logo {
-  font-family: "Manga Temple", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 24px;
